[project]
name = "syng"
version = "2.2.1a0"
description = "Easily host karaoke events"
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
  { name = "Christoph Stahl", email = "christoph.stahl@tu-dortmund.de" }
]
keywords = ["karaoke", "youtube", "web", "audio", "video", "player", "qt"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Environment :: X11 Applications :: Qt",
  "Framework :: AsyncIO",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Sound/Audio :: Players",
  "Topic :: Multimedia :: Video :: Display",
  "Typing :: Typed"
]

dependencies = [
  "python-socketio>=5.14.3",
  "aiohttp>=3.9.1",
  "platformdirs>=4.0.0",
  "yt-dlp[default]>=2025.10.22",
  "qrcode>=8.2"
]

[project.optional-dependencies]
  client = [
    "minio>=7.2.0",
    "pillow>=12.0.0",
    "qrcode>=8.2",
    "pymediainfo>=6.1.0",
    "pyyaml>=6.0.1",
    "pyqt6>=6.7.1,<6.10",
    "mpv>=1.0.7",
    "qasync>=0.27.1"
  ]
  profanity = [
    "alt-profanity-check>=1.4.1",
  ]

[project.urls]
homepage = "https://syng.rocks"
repository = "https://git.k-fortytwo.de/christofsteel/syng"
"Bug Tracker" = "https://github.com/christofsteel/syng/issues"

[project.scripts]
syng = "syng.main:main"


[tool.poetry]
include = ["syng/static"]

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"
types-pillow = "^10.1.0.2"
mypy = "^1.10.0"
pylint = "^3.2.7"
requirements-parser = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.pylint."MESSAGES CONTROL"]
disable = '''too-many-lines,
too-many-ancestors
'''

[tool.mypy]
mypy_path = "typings"

[[tool.mypy.overrides]]
module = [
  "yt_dlp",
  "yt_dlp.utils",
  "pymediainfo",
  "minio",
  "qrcode",
  "engineio",
  "tkcalendar",
  "customtkinter",
  "aiohttp",
  "tktimepicker",
  "platformdirs"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
